erDiagram
    loads ||--o{ routes : has
    routes ||--o{ route_states : crosses
    loads ||--o{ oversize_evaluations : evaluated
    routes ||--o| oversize_evaluations : "based on"
    tenants ||--o{ oversize_rules : "per state"
    loads ||--o{ permits : requires
    loads ||--o{ escorts : requires
    documents ||--o{ permits : "attached to"
    documents ||--o{ escorts : "attached to"

    routes {
        uuid id PK
        uuid load_id FK
        varchar provider
        integer total_miles
        bigint estimated_toll_cents "requires TollGuru, unimplemented"
        boolean is_current
    }
    route_states {
        uuid id PK
        uuid route_id FK
        varchar state_code
        integer sequence
    }
    oversize_rules {
        uuid id PK
        uuid tenant_id FK
        varchar state_code "UK per tenant"
        integer max_width_inches
        integer max_gross_weight_pounds
        boolean permit_required_above_legal
    }
    oversize_evaluations {
        uuid id PK
        uuid load_id FK
        uuid route_id FK
        varchar outcome
        varchar human_validation_status "pending|validated|rejected"
        jsonb state_results
    }
    permits {
        uuid id PK
        uuid load_id FK
        varchar state_code
        varchar status
        bigint cost_cents
        uuid document_id FK
    }
    escorts {
        uuid id PK
        uuid load_id FK
        varchar escort_type
        varchar status
        bigint cost_cents
    }
